--- a/libx/mobilex.versions.toml
+++ b/libx/mobilex.versions.toml
@@ -48,6 +48,7 @@ libxData = "1.0.0"
 libxUiBase = "1.0.0"
 libxUiComposex = "1.0.0"
 libxUiMdc = "1.0.0"
+libxPlugins = "1.0.0"
 
 [libraries]
 androidBuildGrade = { group = "com.android.tools.build", name = "gradle", version.ref = "buildGradle" }
@@ -127,6 +128,7 @@ coreLibxData = { group = "vn.core.libx", name = "data", version.ref = "libxData"
 coreLibxUiBase = { group = "vn.core.libx-ui", name = "base", version.ref = "libxUiBase" }
 coreLibxUiComposex = { group = "vn.core.libx-ui", name = "composex", version.ref = "libxUiComposex" }
 coreLibxUiMdc = { group = "vn.core.libx-ui", name = "mdc", version.ref = "libxUiMdc" }
+coreLibxPlugins = { group = "vn.core.libx", name = "plugins", version.ref = "libxPlugins" }
 
 # Others
 loadImages = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
@@ -143,7 +145,9 @@ kotliNpoet = { group = "com.squareup", name = "kotlinpoet", version.ref = "kotli
 [bundles]
 coreAndroidComponents = [
     "androidxCoreKtx", "androidxCoreSplashscreen", "androidxCoreCoroutines",
-    "material", "androidxAppcompat", "androidxAppcompatResource", "androidxSwiperefreshlayout"
+    "material", "androidxAppcompat", "androidxAppcompatResource", "androidxSwiperefreshlayout",
+    "androidxPagingRuntime", "androidxNavigationFragmentKtx", "androidxNavigationUiKtx",
+    "androidxLifecycleViewmodel", "androidxCoroutines", "androidxHilt"
 ]
 roomComponents = ["androidxRoomRuntime", "androidxRoomCompiler"]
 pagingComponents = ["androidxPagingCommon", "androidxPagingRuntime"]
@@ -158,9 +162,15 @@ jetpackComposeComponents = [
     "androidxComposeUiTooling", "androidxComposeUiToolingPreview", "androidxComposeMaterial3",
     "androidxComposeMaterial3Icons", "androidxComposeWindowSize", "androidxComposeUiTextGoogleFonts"
 ]
+testComponents = [
+    "androidxJunit", "junit", "mockito", "mockitoKotlin", "androidxCoroutinesTest",
+    "androidxHiltTesting"
+]
 androidTestComponents = [
-    "androidxJunit", "junit", "androidxEspressoCore", "mockito", "mockitoKotlin", "androidxCoroutinesTest",
-    "androidxHiltTesting", "androidxComposeUiTestJunit4", "androidxComposeUiTestManifest"
+    "androidxJunit", "androidxEspressoCore", "androidxHiltTesting"
+]
+composeTestComponents = [
+    "androidxComposeUiTestJunit4", "androidxComposeUiTestManifest"
 ]
 firebaseComponents = ["firebaseBom", "firebaseAnalytics", "firebaseCrashlytics"]
 networkingComponents = [
