--- a/libx/mobilex.versions.toml
+++ b/libx/mobilex.versions.toml
@@ -41,6 +41,7 @@ javax = "1"
 mockitoVersion = "5.12.0"
 mockitoKotlinVersion = "5.3.1"
 binaryCompatibilityValidator = "0.13.0"
+material3 = "1.3.0"
 
 # LibX
 libxDomain = "1.0.0"
@@ -103,6 +104,7 @@ androidxComposeUiTestManifest = { group = "androidx.compose.ui", name = "ui-test
 androidxComposeUiTestJunit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidxComposeMaterial3 = { group = "androidx.compose.material3", name = "material3" }
 androidxComposeMaterial3Icons = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidxComposeMaterial3Android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3" }
 androidxComposeUiTextGoogleFonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 androidxNavigationCompose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 androidxNavigationHiltCompose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "navigationHilt" }
