--- a/libx/mobilex.versions.toml
+++ b/libx/mobilex.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.4.2"
-kotlin = "1.9.24"
+agp = "8.7.2"
+kotlin = "2.0.21"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -190,3 +190,4 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 googleService = { id = "com.google.gms.google-services", version.ref = "googleService" }
 firebaseCrashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlytics" }
 binaryCompatibilityValidator = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "binaryCompatibilityValidator" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
